# mrphilroth.github.com

./: CNAME  Makefile  README.md  _config.yml  authors.html  categories.html  index.html  index.md  pelicanconf.py  publishconf.py  pyproject.toml  tags.html
_layouts/: default.html  post.html
_posts/: 2012-07-10-facebook-recruiting-contest.md  2012-09-01-emc-data-science-challenge.md  2013-04-02-significance-of-the-heats-streak.md  2013-06-13-how-i-learned-to-stop-worrying-and-love-rotten-tomatoes.md  2013-06-30-yelp-recruiting-competition.md  2013-07-10-asiana-flight-214.md  2013-07-10-some-data-from-asiana-flight-214.md  2013-08-02-amazon-employee-access-challenge.md  2013-08-21-mlb-past-and-future-payrolls.md  2013-08-29-nba-past-and-future-payrolls.md  2013-10-09-bucs-data-crunch-series.md  2013-12-20-mlb-payrolls-updated.md  2013-12-22-mlb-payrolls-updated.md
content/pages/: dataviz.md  things.md
crowsfoot/templates/: base.html  page.html
feeds/: all.atom.xml
hidden/bucs1/: index.html  vis01.html  vis01.js  vis01_data.csv
hidden/bucs2/: index.html  vis02.css  vis02.html  vis02.js
hidden/bucs3/: index.html  vis03.css  vis03.html  vis03.js  vis03_data.csv
hidden/bucs4/: vis04.css  vis04.html  vis04.js  vis04_data.csv
mlbpayrolls/: index.html  payrolls.js
mlbpayrolls/raw/: index.html  mlbpayrolls.js  team_data.json
nbapayrolls/: index.html
nbapayrolls/raw/: index.html  nbapayrolls.csv  nbapayrolls.js  salary_cap.csv  team_data.json
output/mlbpayrolls/: index.html
pages/: dataviz.html  things.html
viz/bucs1/: index.html  vis01.html
(+21 files in other folders)
