[tool.poetry]
name = "mrphilroth.github.com"
version = "0.1.0"
description = ""
authors = ["Phil Roth <mr.phil.roth@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pelican = "^4.7.2"
Markdown = "^3.3.7"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
